Alteração de curriculo

--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <h1 class="jumbotron-heading" style="color:#aa7995;text-transform: uppercase;">Contato</h1>
                 <p></p>
-                <a href="Amanda Gomes Lobo - Curriculo.docx.pdf" download> <button type="button" class="botao" id="botaoL">Download CV</button></a>
+                <a href="CV - Amanda Lobo.pptx.pdf" download> <button type="button" class="botao" id="botaoL">Download CV</button></a>
                 <br>
                 <br>
                 <a href="https://www.linkedin.com/in/amandag-lobo/" target="_blank"> <img class ="linkedin" src="linkedin.png" alt="ícone linkedin"></a>
