--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <section class="jumbotron text-center">
             <div class="container">
-                <img class = "avatar" src="MinhaFoto.png" alt="Imagem não renderizada">
+                <img class = "avatar" src="avatar.png" alt="Imagem não renderizada">
                 <h1 class="jumbotron-heading" style="color:#aa7995;text-transform: uppercase;">Amanda Gomes Lobo</h1>
                 <p style="color:#aa7995 !important;">Estudante de ADS pela Universidade Nove de Julho (UNINOVE) | Estudante Full Stack Developer Jr. pela Generation Brasil</p>
 </body>
